changed the file path for css

--- a/davies-burgers.html
+++ b/davies-burgers.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Davie JR's Menu</title>
-  <link href="./Resources/CSS/style.css" rel="stylesheet" type="text/css" >
+  <link href="brinash1.github.io/davies-burgers.css" rel="stylesheet" type="text/css" >
 </head>
 
 <body>
