changed css file path

--- a/CSS-Display-Survey.html
+++ b/CSS-Display-Survey.html
@@ -3,7 +3,7 @@
 <head>
   <title>Please Participate in Our Survey!</title>
 
-  <link rel="stylesheet" type="text/css" href="./Resources/CSS/style.css">
+  <link rel="stylesheet" type="text/css" href="brinash1.github.io/CSS-Display-Survey.css">
 </head>
 <body>
 
