--- a/css-display-survey.html
+++ b/css-display-survey.html
@@ -3,7 +3,7 @@
 <head>
   <title>Please Participate in Our Survey!</title>
 
-  <link rel="stylesheet" type="text/css" href="brinash1.github.io/CSS-Display-Survey.css">
+  <link rel="stylesheet" type="text/css" href="brinash1.github.io/css-display-survey.css">
 </head>
 <body>
 
