linked css file

--- a/tea-cozy.html
+++ b/tea-cozy.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Tea Cozy</title>
-  <link href="./resources/css/style.css" type="text/css" rel="stylesheet">
+  <link href="brinash1.github.io/tea-cozy.css" type="text/css" rel="stylesheet">
 </head>
   <body>
 
